# net-agent

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  log4rs.yml
.config/: config.toml
.github/workflows/: build.yml  prepare-changelog-for-update.yml  push-to-cratesio.yml  update-changelog.yml
src/: agent.rs  args.rs  config.rs  lib.rs  log4rs.yml  main.rs  packet_handler.rs
src/core/: mod.rs  poller.rs
