[package]
name = "net-agent"
version = "0.1.0"
edition = "2021"
description = """
net-agent is a binary crate which you can run to capture network traffic.
Then all the captured traffic can be loaded to my.netstalker.io for further analysis.
"""
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net-config = "0.1.1"
net-agent-api = "0.1.4"
net-file = "0.1.3"
pcap = "1.0.0"
derivative = "2.2.0"
serde_yaml = "0.9.21" 
toml = "0.8.12"
serde = "1.0.197"
serde_derive = "1.0.197"
config = "0.14.0"
log = "0.4.17"
log4rs = "1.2.0"
uuid = { version = "1.8.0", features = ["v4"] }
directories = "5.0.1"
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
threadpool = "1.8.1"
